# matlabcl

./: CMakeLists.txt  FEATURES  IDEAS  README  runtest.m
cmake/Modules/: MatlabMexMacro.cmake
src/: matlabcl.cc  simple_double.cl  test.cl  testmatlabcl.m
